--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -1,13 +1,13 @@
 .text {
   @include font-size(18px, 27px);
-  margin-top: $spacing-double - $spacing-and-half;
+  margin-top: $spacing-double;
 
   @include breakpoint($breakpoint-l) {
-    margin-top: $spacing-quadruple - $spacing-and-half;
+    margin-top: $spacing-triple;
   }
 
-  &:first-child {
-    margin-top: 0;
+  .text__container {
+    padding-top: 0;
   }
 
   .text__text-content {
