--- a/src/scss/layout/_paragraph-content.scss
+++ b/src/scss/layout/_paragraph-content.scss
@@ -1,5 +1,5 @@
-.paragraph_content {
-  > *:last-child {
-    margin-bottom: 0;
+.paragraph-content {
+  > *:first-child {
+    margin-top: 0;
   }
 }
