--- a/src/scss/layout/_main-content.scss
+++ b/src/scss/layout/_main-content.scss
@@ -1,7 +1,20 @@
+.main-content {
+  margin-top: $spacing-triple;
+
+  @include breakpoint($breakpoint-s) {
+    margin-top: $spacing-quadruple;
+  }
+
+  @include breakpoint($breakpoint-l) {
+    margin-top: $spacing-sextuple;
+  }
+}
+
 .has-sidebar--first .main-content {
   @include breakpoint($breakpoint-l) {
     display: flex;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     max-width: $content-area-wrapper-width-max;
     padding: 0 $spacing-double;
     width: 100%;
