UHF-1734: Add new field lead-in for the basic page and style it

--- a/src/scss/components/content/_basic-page.scss
+++ b/src/scss/components/content/_basic-page.scss
@@ -13,3 +13,12 @@
     }
   }
 }
+
+.lead-in {
+  @include font-size(18px, 27px);
+  margin-bottom: $spacing-triple;
+
+  .lead-in__container {
+    padding-top: 0;
+  }
+}
