--- a/src/scss/components/content/_basic-page.scss
+++ b/src/scss/components/content/_basic-page.scss
@@ -17,8 +17,13 @@
 .lead-in {
   @include font-size(18px, 27px);
   margin-bottom: $spacing-triple;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $content-area-wrapper-width-max;
 
   .lead-in__container {
+    margin: 0;
+    max-width: $content-width-max;
     padding-top: 0;
   }
 }
