UHF-2005: Fix unit_search background color transition if it is the first paragraph under hero, adjust width of the hover secondary menu item relative to the parent menu item on desktop menu

--- a/src/scss/components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/components/navigation/_header-bottom-navigation.scss
@@ -105,8 +105,9 @@
       bottom: auto;
       display: block;
       left: -$spacing-double;
+      min-width: 310px;
       position: absolute;
-      width: 310px;
+      width: calc(100% + #{$spacing-quadruple});
       z-index: 100;
 
       .menu__item {
