UHF-2005: Fix services and units blocks on tpr going under react and share block

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -372,13 +372,14 @@
   }
 }
 
-.unit.unit--full {
+.main-content:last-child .unit.unit--full {
   .unit__services:last-child {
     // Make the keywords element go "under" the footer.
     margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
     padding-bottom: $spacing-double + $footer-koro-height;
 
     @include breakpoint($breakpoint-l) {
+      margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-quadruple}));
       padding-bottom: $spacing-quadruple + $footer-koro-height;
     }
   }
