--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -603,4 +603,14 @@
       }
     }
   }
+
+  .banner {
+    margin-left: -$spacing-and-half;
+    margin-right: -$spacing-and-half;
+
+    @include breakpoint($breakpoint-l) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
