UHF-1760: Start styling for react and share block

--- a/src/scss/components/block/_react-and-share.scss
+++ b/src/scss/components/block/_react-and-share.scss
@@ -52,12 +52,15 @@
           }
 
           .rns-reaction-button {
-            &:focus {
-              &:hover {
-                .rns-label {
-                  color: $color-bus;
-                }
-              }
+            border-color: $color-black;
+
+            .rns-label {
+              color: $color-black;
+              width: 100%;
+            }
+
+            &:focus:hover .rns-label {
+              color: $color-black;
             }
           }
         }
