--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -617,7 +617,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: $spacing-double $spacing-and-half $spacing-and-half;
+    padding: $spacing-double $spacing-and-half;
     width: 100%;
 
     @include breakpoint($breakpoint-m) {
@@ -687,6 +687,7 @@
     margin-top: $spacing-and-half;
 
     @include breakpoint($breakpoint-m) {
+      margin-bottom: -#{$spacing-half};
       margin-right: $spacing;
       margin-top: 0;
     }
