--- a/src/scss/components/block/_react-and-share.scss
+++ b/src/scss/components/block/_react-and-share.scss
@@ -260,15 +260,15 @@
             }
 
             &:hover {
-              background-color: $color-black;
               opacity: 1;
 
               &:before {
-                background-color: $color-white;
+                background-color: $color-black;
               }
 
               .rns-label {
-                color: $color-white;
+                color: $color-black;
+                text-decoration: underline;
               }
             }
 
