--- a/src/scss/components/paragraphs/_banner.scss
+++ b/src/scss/components/paragraphs/_banner.scss
@@ -9,11 +9,6 @@
     margin-top: $spacing-triple;
   }
 
-  .banner__title,
-  .banner__desc {
-    max-width: 700px; // According to layouts.
-  }
-
   .banner__title {
     @include font-size(24px, 29px);
     margin-top: 0;
@@ -42,7 +37,7 @@
     margin-right: $spacing;
 
     @include breakpoint($breakpoint-m) {
-      margin-right: $spacing-triple;
+      margin-right: $spacing-and-half;
     }
 
     .icon {
@@ -59,8 +54,12 @@
   }
 
   .banner__container {
+    margin-left: 0;
+    margin-right: 0;
     // Arbitrary max-width that was determined to look good with the designers.
     max-width: 1030px;
+    padding-left: $spacing-triple;
+    padding-right: $spacing-triple;
     padding-top: 0;
   }
 
@@ -75,6 +74,12 @@
 
   .banner__title,
   .banner__desc {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px; // According to layouts.
+  }
+
+  .banner__container {
     margin-left: auto;
     margin-right: auto;
   }
