--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -1,4 +1,5 @@
-$teaser-icon-size: 48px;
+$teaser-icon-size-mobile: 32px;
+$teaser-icon-size-desktop: 48px;
 
 .service {
   .service__title {
@@ -80,14 +81,35 @@ $teaser-icon-size: 48px;
 }
 
 .service.service--teaser {
-  background-color: $color-white;
+  @include breakpoint($breakpoint-l) {
+    height: 100%;
+    margin-left: calc(#{$spacing-and-half} / 2);
+    margin-right: calc(#{$spacing-and-half} / 2);
+  }
 
   .service__link {
+    border: 1px solid $color-black;
     display: block;
     height: 100%;
-    padding: $spacing-double $spacing ($spacing + $teaser-icon-size + $spacing);
+    margin-top: $spacing-half;
+    padding: $spacing-and-half calc(#{$spacing-and-half} + #{$teaser-icon-size-mobile} + #{$spacing}) $spacing-and-half $spacing-and-half;
     position: relative;
     text-decoration: none;
+
+    @include breakpoint($breakpoint-l) {
+      margin-top: 0;
+    }
+
+    &:before {
+      background-color: var(--hdbt-color-palette--accent);
+      content: "";
+      display: block;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: $spacing-half;
+    }
 
     &:hover {
       .icon {
@@ -97,7 +119,8 @@ $teaser-icon-size: 48px;
   }
 
   .service__title {
-    @include font-size(22px, 22px);
+    @include font-size(20px, 22px);
+    font-weight: 500;
     margin: 0;
   }
 
@@ -107,12 +130,14 @@ $teaser-icon-size: 48px;
   }
 
   .icon {
-    bottom: $spacing;
-    height: $teaser-icon-size;
-    left: $spacing;
+    bottom: 50%;
+    height: $teaser-icon-size-mobile;
+    left: auto;
     position: absolute;
+    right: $spacing;
+    transform: translateY(50%);
     transition: all .3s;
-    width: $teaser-icon-size;
+    width: $teaser-icon-size-mobile;
   }
 }
 
