--- a/src/scss/components/paragraphs/_service-list.scss
+++ b/src/scss/components/paragraphs/_service-list.scss
@@ -1,16 +1,22 @@
 .service-list {
-  background-color: $color-silver-light;
-  padding: 0 0 $spacing-double;
+  margin-top: $spacing-quadruple;
+  padding: 0;
+
+  @include breakpoint($breakpoint-l) {
+    margin-top: $spacing-sextuple;
+  }
 }
 
 .service-list__container {
-  @include breakpoint($breakpoint-m) {
-    padding-top: $spacing-quadruple;
-  }
+  padding-top: 0;
 }
 
 .service-list__header__title {
   margin-top: 0;
+
+  @include breakpoint($breakpoint-l) {
+    @include font-size(48px, 48px);
+  }
 }
 
 .service-list__header__description {
@@ -22,7 +28,7 @@
 }
 
 .views--service-list {
-  margin-top: $spacing-double;
+  margin-top: $spacing-and-half;
 
   .hds-button--primary {
     --background-color: var(--color-black);
@@ -94,16 +100,15 @@
   }
 
   .service-list__count-container {
-    @include font-size(23px, 30px);
+    @include font-size(18px, 24px);
     border-top: 1px solid $color-black-10;
     display: block;
-    margin-top: $spacing-double;
-    padding-top: $spacing-double;
+    margin-top: $spacing-and-half;
+    padding-top: $spacing-and-half;
     width: 100%;
 
-    @include breakpoint($breakpoint-m) {
-      margin-top: $spacing-quadruple;
-      padding-top: $spacing-quadruple;
+    @include breakpoint($breakpoint-l) {
+      @include font-size(24px, 30px);
     }
 
     .service-list__count {
@@ -112,10 +117,18 @@
   }
 
   .views-infinite-scroll-content-wrapper {
-    margin-top: $spacing;
+    margin-top: $spacing-and-half;
 
-    @include breakpoint($breakpoint-m) {
+    @include breakpoint($breakpoint-l) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: calc(-#{$spacing-and-half} / 2);
+      margin-right: calc(-#{$spacing-and-half} / 2);
       margin-top: $spacing-double;
+    }
+
+    .views-row {
+      width: 25%;
     }
   }
 
@@ -123,7 +136,7 @@
     display: flex;
     justify-content: center;
     list-style: none;
-    margin: 0;
+    margin: $spacing-double 0 0;
     padding: 0;
 
     @include breakpoint($breakpoint-m) {
