--- a/templates/content/tpr-service.html.twig
+++ b/templates/content/tpr-service.html.twig
@@ -9,11 +9,15 @@
   {% set in_menu =  TRUE %}
 {% endif %}
 
-{% embed '@helfi_tpr/tpr-service.html.twig' with {in_menu: in_menu} %}
+{% if content.field_sidebar_content|render|striptags|trim is not empty %}
+  {% set sidebar_content = TRUE %}
+{% endif %}
+
+{% embed '@helfi_tpr/tpr-service.html.twig' with {in_menu: in_menu, sidebar_content: sidebar_content} %}
   {% block sidebar_block %}
     {{ drupal_entity('block', 'main_navigation_level_2', check_access=false) }}
+    {{ content.field_sidebar_content }}
   {% endblock sidebar_block %}
-
   {% block main_content %}
     <div class="enriched-content has-sidebar">
       {{ content.field_content }}
