Fix content liftup image placeholder position on large cards

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -602,6 +602,9 @@
     width: 100%;
 
     @include breakpoint($breakpoint-m) {
+      align-items: center;
+      background-color: var(--hdbt-color-palette--primary);
+      display: flex;
       width: 30%;
     }
 
