UHF-2286: Add styles that override kuura-widget-container-inline styles, make attachments region content visible for users

--- a/src/scss/layout/_attachments.scss
+++ b/src/scss/layout/_attachments.scss
@@ -1,3 +1,5 @@
 .region--attachments {
-  display: none; // The region does not display anything that the user would see - just blocks that add libraries etc.
+  height: 0;
+  visibility: hidden;
+  width: 0;
 }
