UHF-2520: Change service list string results to services

--- a/templates/views/views-view--service-list.html.twig
+++ b/templates/views/views-view--service-list.html.twig
@@ -56,7 +56,7 @@
 
   <span class="service-list__count-container">
     <span class="service-list__count">{{ total_rows }}</span>
-    {% trans with {'context': 'Service list count'}%}result{% plural total_rows %}results{% endtrans %}
+    {% trans with {'context': 'Service list count'}%}service{% plural total_rows %}services{% endtrans %}
   </span>
 
   {{ rows }}
