UHF-2524: Add errand service details into one accordion container

--- a/src/scss/components/content/_errand-service.scss
+++ b/src/scss/components/content/_errand-service.scss
@@ -27,4 +27,10 @@
     padding-right: 0;
     padding-top: 0;
   }
+
+  .accordion-item__content__inner {
+    .errand-service__detail-title {
+      margin-top: $spacing-and-half;
+    }
+  }
 }
