--- a/src/scss/components/content/_errand-service.scss
+++ b/src/scss/components/content/_errand-service.scss
@@ -1,5 +1,9 @@
 .errand-service {
   margin-top: $spacing-triple;
+
+  @include breakpoint($breakpoint-l) {
+    margin-top: $spacing-quadruple;
+  }
 }
 
 .errand-service__container {
@@ -28,9 +32,34 @@
     padding-top: 0;
   }
 
-  .accordion-item__content__inner {
-    .errand-service__detail-title {
-      margin-top: $spacing-and-half;
+  .errand-service__detail-links {
+    list-style: none;
+    padding-top: 0;
+
+    .errand-service__detail-link-wrapper {
+      margin-top: $spacing;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+
+    .errand-service__detail-link {
+      display: flex;
+
+      &:before {
+        background-color: $color-black;
+        background-size: contain;
+        content: "";
+        display: flex;
+        height: 24px;
+        margin-right: $spacing-half;
+        mask-image: url('../icons/hds/ui/globe.svg');
+        mask-position: center;
+        mask-repeat: no-repeat;
+        mask-size: 24px;
+        width: 24px;
+      }
     }
   }
 }
