--- a/src/scss/components/paragraphs/_unit-search.scss
+++ b/src/scss/components/paragraphs/_unit-search.scss
@@ -52,10 +52,12 @@
     }
   }
 
+
   .views-exposed-form {
     @include breakpoint($breakpoint-m) {
       align-items: flex-end;
       display: flex;
+      flex-wrap: wrap;
     }
 
     .form-item {
@@ -83,6 +85,12 @@
       .hds-text-input__input {
         padding-right: $spacing-triple;
       }
+    }
+
+    // Move language checkbox to a new row and set proper margin
+    [data-drupal-selector="edit-provided-languages-value"] {
+      margin-top: $spacing-and-half;
+      order: 1;
     }
 
     .form-actions {
