--- a/src/scss/components/content/_service-channel.scss
+++ b/src/scss/components/content/_service-channel.scss
@@ -1,8 +1,91 @@
-.service-channel {
-  background-color: var(--hdbt-color-palette--secondary);
+.service-channel__links {
+  overflow: hidden;
+
+  a {
+    @extend .emulate-button--primary;
+    --background-color: var(--hdbt-color-palette-button--secondary);
+    --background-color-focus: var(--hdbt-color-palette-button--secondary);
+    --border-color: var(--hdbt-color-palette-button--secondary);
+    --border-color-hover: var(--hdbt-color-palette-button--secondary);
+    --border-color-focus: var(--hdbt-color-palette-button--secondary);
+    --border-color-hover-focus: var(--hdbt-color-palette-button--secondary);
+    --color: var(--hdbt-color-palette-button-contrast--secondary);
+    --color-hover: var(--hdbt-color-palette-button--secondary);
+    --color-focus: var(--hdbt-color-palette-button-contrast--secondary);
+    --color-hover-focus: var(--hdbt-color-palette-button--secondary);
+    --focus-outline-color: var(--hdbt-color-palette-button--secondary);
+    clear: both;
+    float: left;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
 
-.errand-service .service-channel {
+
+.service-channel:not(.service-channel--eservice) {
+  margin: $spacing-and-half 0 0;
+  padding-bottom: 0;
+  // Padding-left: Icon width + spacing between icon and text
+  padding-left: calc(#{$spacing-and-half} + #{$spacing-half});
+  padding-right: $spacing;
+  padding-top: 0;
+
+  @include breakpoint($breakpoint-l) {
+    border: 1px solid $color-black;
+    margin: $spacing-double 0 0;
+    padding-bottom: $spacing-double;
+    // Padding-left: spacing to element edge + Icon width + spacing between icon and text
+    padding-left: calc(#{$spacing-and-half} + #{$spacing-and-half} + #{$spacing-half});
+    padding-right: $spacing-and-half;
+    padding-top:  $spacing-double;
+  }
+
+  .service-channel__header {
+    align-items: flex-start;
+    display: flex;
+  }
+
+  .service-channel__type {
+    height: 24px;
+    margin-left: calc(-#{$spacing-and-half} - #{$spacing-half});
+    overflow: hidden;
+    position: relative;
+    text-indent: -9999px;
+    width: 24px;
+
+    &:after {
+      background-color: $color-black;
+      background-size: contain;
+      content: "";
+      height: 24px;
+      left: 0;
+      mask-position: center;
+      mask-repeat: no-repeat;
+      mask-size: 24px;
+      position: absolute;
+      text-indent: 0;
+      top: 0;
+      width: 24px;
+    }
+  }
+
+  .service-channel__title {
+    @include font-size(18px, 26px); // Design has smaller font size than normal h3.
+    font-weight: 500;
+    margin-top: 0;
+    padding-left: $spacing-half;
+    width: 100%;
+  }
+
+  .service-channel__links {
+    margin-top: $spacing-and-half;
+  }
+}
+
+.service-channel--eservice {
+  background-color: var(--hdbt-color-palette--secondary);;
   margin: $spacing-and-half -#{$spacing-and-half} 0;
   padding: $spacing-and-half $spacing-and-half $spacing-double;
 
@@ -10,21 +93,73 @@
     margin: $spacing-double 0 0;
     padding: $spacing-triple $spacing-double;
   }
+
+  .service-channel__type {
+    @include font-size(18px, 26px);
+    font-weight: 500;
+  }
+
+  .service-channel__title {
+    @include font-size(28px, 43px); // Design has larger font size on mobile than normal h3.
+    font-weight: 500;
+    margin-top: $spacing-and-half;
+
+    @include breakpoint($breakpoint-l) {
+      @include font-size(36px, 43px);
+      margin-top: $spacing;
+    }
+  }
+
+  .service-channel__links {
+    margin-top: $spacing-double;
+  }
 }
 
-.service-channel__type {
-  @include font-size(16px, 24px);
-  font-weight: 500;
+.service-channel--email .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/glyph-at.svg');
 }
 
-.service-channel__title {
-  @include font-size(28px, 43px); // Design has larger font size on mobile than normal h3.
-  font-weight: 500;
-  margin-top: $spacing-and-half;
+.service-channel--telephone .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/phone.svg');
+}
 
-  @include breakpoint($breakpoint-l) {
-    @include font-size(36px, 43px);
-    margin-top: $spacing;
+.service-channel--printable_form .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/document.svg');
+}
+
+.service-channel--webpage .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/globe.svg');
+}
+
+.service-channel--chat .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/speechbubble-text.svg');
+}
+
+.service-channel--local .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/location.svg');
+}
+
+
+.service-channel__phone,
+.service-channel__email {
+  margin-top: $spacing;
+
+  > a {
+    @include font-size(24px, 26px);
+  }
+}
+
+.service-channel__call_charge {
+  display: flex;
+  margin-top: $spacing;
+
+  .service-channel__call_charge-label {
+    font-weight: 500;
+    margin-right: $spacing-quarter;
+  }
+
+  p:first-of-type {
+    margin-top: 0;
   }
 }
 
@@ -46,29 +181,6 @@
       &:after {
         content: "";
       }
-    }
-  }
-}
-
-.service-channel__links {
-  margin-top: $spacing-double;
-
-  a {
-    @extend .emulate-button--primary;
-    --background-color: var(--hdbt-color-palette-button--secondary);
-    --background-color-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover: var(--hdbt-color-palette-button--secondary);
-    --border-color-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --color: var(--hdbt-color-palette-button-contrast--secondary);
-    --color-hover: var(--hdbt-color-palette-button--secondary);
-    --color-focus: var(--hdbt-color-palette-button-contrast--secondary);
-    --color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --focus-outline-color: var(--hdbt-color-palette-button--secondary);
-
-    &:first-child {
-      margin-top: 0;
     }
   }
 }
