UHF-2498: Style service channel type mail

--- a/src/scss/components/content/_service-channel.scss
+++ b/src/scss/components/content/_service-channel.scss
@@ -139,6 +139,9 @@
   mask-image: url('../icons/hds/ui/location.svg');
 }
 
+.service-channel--mail .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/envelope.svg');
+}
 
 .service-channel__phone,
 .service-channel__email {
