UHF-468: Add spacing above announcement link to separate it more clearly from the body text

--- a/src/scss/components/misc/_announcement.scss
+++ b/src/scss/components/misc/_announcement.scss
@@ -55,9 +55,17 @@
   }
 }
 
-.announcement__link a::after {
-   @include pseudo-icon("arrow-right", $spacing-and-half);
-   margin-left: $spacing-quarter;
+.announcement__link {
+  margin-top: $spacing;
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  a::after {
+    @include pseudo-icon("arrow-right", $spacing-and-half);
+    margin-left: $spacing-quarter;
+  }
 }
 
 // Disabled until we want to introduce announcement close functionality
