--- a/modules/hdbt_content/templates/cookie-consent-intro.html.twig
+++ b/modules/hdbt_content/templates/cookie-consent-intro.html.twig
@@ -1,5 +1,7 @@
-<div class="cc_content">
-  <h2>{{ title }}</h2>
-  {{ content }}
-  <h3>{{ 'Consent management'|t }}</h3>
-</div>
+{% embed "@hdbt/misc/container.twig" with {container_element: 'cookie-compliance__lead-in'} %}
+  {% block container_content %}
+    <h1>{{ title }}</h1>
+    {{ content }}
+    <h2>{{ 'Consent management'|t }}</h2>
+  {% endblock container_content %}
+{% endembed %}
