--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -14,7 +14,7 @@
     background-color: $color-black;
     display: block;
     height: 2px;
-    margin-bottom: $spacing-triple;
+    margin-bottom: $spacing-and-half;
     margin-top: $spacing-double;
     width: $spacing-quadruple;
   }
@@ -385,6 +385,28 @@
   }
 }
 
+.unit__supports_language_sv {
+  @include font-size(13px, 24px);
+  background-color: $color-summer;
+  border-radius: $spacing;
+  display: inline-block;
+  padding-bottom: $spacing-quarter;
+  padding-left: $spacing-and-half;
+  padding-right: $spacing-and-half;
+  padding-top: $spacing-quarter;
+
+  .unit--full & {
+    margin-bottom: $spacing-and-half;
+    @include breakpoint($breakpoint-m) {
+      margin-bottom: $spacing-double;
+    }
+  }
+
+  .unit--teaser-with-image & {
+    margin-top: $spacing-and-half;
+  }
+}
+
 .unit.unit--teaser {
   align-items: flex-start;
   background-color: $color-white;
@@ -399,14 +421,18 @@
     align-items: stretch;
     flex-direction: row;
     justify-content: flex-end;
-    margin-bottom: $spacing-half;
     padding: $spacing-double $spacing-triple;
+    padding-bottom: $spacing-and-half;
+  }
+
+  .views-row:last-child & {
+    margin-bottom: 0;
   }
 
   .unit__title {
     @include font-size(24px, 29px);
     font-weight: 500;
-    margin-bottom: $spacing-and-half;
+    margin-bottom: $spacing-quarter;
     margin-top: 0;
     padding-right: $spacing-and-half;
 
@@ -416,6 +442,7 @@
   }
 
   .unit__info {
+    margin-top: $spacing-quarter;
     @include breakpoint($breakpoint-m) {
       @include font-size(18px, 26px);
       width: 60%;
@@ -423,6 +450,7 @@
   }
 
   .unit__info-row {
+    @include font-size(18px, 26px);
     display: flex;
     margin-bottom: $spacing-and-half;
 
@@ -470,7 +498,7 @@
 
   .unit__link {
     line-height: 0;
-    margin-top: 32px;
+    margin-top: $spacing-and-half;
 
     @include breakpoint($breakpoint-m) {
       align-items: flex-end;
@@ -535,9 +563,11 @@
     }
 
     .unit__text__content {
+      align-content: flex-start;
       @include breakpoint($breakpoint-m) {
         display: flex;
         flex-wrap: wrap;
+        min-height: 160px; // Min height of the card is set to match a card with a single line title, address, phone and swedish language support so that the photo is closer to native aspect ratio.
         width: 80%;
       }
     }
@@ -559,11 +589,11 @@
 
     .unit__info-row--address {
       @include breakpoint($breakpoint-m) {
-        @include font-size(20px, 32px);
-        margin-bottom: $spacing-double;
+        margin-bottom: $spacing-half;
       }
 
       .icon {
+        display: inline-block;
         @include breakpoint($breakpoint-m) {
           display: none;
         }
