--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -91,14 +91,20 @@
   }
 
   ul, ol {
+    margin-bottom: 24px;
     padding: 0;
 
     li {
       margin-left: $spacing-double;
-      padding-left: $spacing;
+      padding-left: $spacing-half;
+    }
+
+    li + li {
+      margin-top: $spacing;
     }
 
     ul, ol {
+      margin-bottom: 0;
       margin-top: $spacing;
 
       li {
