UHF-2694: Fix navigation icon positions

--- a/src/scss/components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/components/navigation/_header-bottom-navigation.scss
@@ -219,7 +219,8 @@
   .menu__toggle-button {
     background-color: transparent;
     border: none;
-    margin: 0 0 0 $spacing-half;
+    // Adjusting chevron position to match text.
+    margin: 5px 0 0 $spacing-half;
     padding: 0;
 
     &:hover {
