--- a/templates/navigation/menu--main--sidebar.html.twig
+++ b/templates/navigation/menu--main--sidebar.html.twig
@@ -65,7 +65,7 @@
 
           {% if item.is_collapsed or item.is_expanded %}
             <button type="button" aria-expanded="true" aria-controls="menu--level-{{ menu_level + 1 }}" class="menu__toggle-button">
-              {% include '@hdbt/misc/icon.twig' with {icon: 'angle-up', icons_path: icons_path} %}
+              {% include '@hdbt/misc/icon.twig' with {icon: 'angle-down', icons_path: icons_path} %}
             </button>
           {% endif %}
         </span>
